[metadata]
name = opentelekomcloud-infra-apimon-tests
summary = Open Telekom Cloud Ecosystem Apimon tests
description-file =
    README.md
author = Ecosystem Contributors
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

